z-index fix

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -34,6 +34,7 @@ body{
 	width: 310px;
 	left: 37%;
 	top: 240px;
+	z-index: 1;
 }
 
 #appname:hover{
